# twzrd-receipt-verifier

./: PUBLISHING.md  README.md  package-lock.json  package.json  pyproject.toml  verify_twzrd_receipt.js  verify_twzrd_receipt.py
test/: verify.test.js
tests/: test_verify.py
